--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-midnight
+title: mermaid
+description: With legs or a tail, collect gems and stomp on enemies to make your way to the goal
+show_downloads: True
